--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(OOP_DZ1)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(OOP_DZ1 main.cpp pilot.h pilot.cpp avion.cpp avion.h flotaAviona.cpp flotaAviona.h)
+add_executable(OOP_DZ1 main.cpp pilot.h pilot.cpp avion.cpp avion.h flotaAviona.cpp flotaAviona.h Let.cpp Let.h Arhiva.cpp Arhiva.h)
